--- a/html（下）/综合案例（注册页面）.html
+++ b/html（下）/综合案例（注册页面）.html
@@ -8,85 +8,77 @@
 </head>
 
 <body>
-    <!-- <table align="center"> -->
-    <h2>青春不再❤️抓紧恋爱👰</h2>
-    性别：<input type="radio" id="male"><label for="male">男♂</label>
-    <input type="radio" id="female"><label for="female">女♀</label><br>
-    生日：<select>
-        <option>2005年</option>
-        <option>2004年</option>
-        <option>2003年</option>
-        <option>2002年</option>
-        <option>2001年</option>
-        <option>1999年</option>
-        <option>1998年</option>
-        <option>1997年</option>
-        <option>1996年</option>
-        <option>1995年</option>
-    </select>
-    <select>
-        <option>1月</option>
-        <option>2月</option>
-        <option>3月</option>
-        <option>4月</option>
-        <option>5月</option>
-        <option>6月</option>
-        <option>7月</option>
-        <option>8月</option>
-        <option>9月</option>
-        <option>10月</option>
-        <option>11月</option>
-        <option>12月</option>
-    </select>
-    <select>
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-        <option>6</option>
-        <option>7</option>
-        <option>8</option>
-        <option>9</option>
-        <option>10</option>
-        <option>11</option>
-        <option>12</option>
-        <option>13</option>
-        <option>14</option>
-        <option>15</option>
-        <option>16</option>
-        <option>17</option>
-        <option>18</option>
-        <option>19</option>
-        <option>20</option>
-    </select><br>
-    地址：<input type="text" value="请输入中文字符"><br>
-    婚姻状况：<input type="radio" id="weihun"><label for="weihun">未婚</label>
-    <input type="radio" id="yihun"><label for="yihun">已婚</label>
-    <input type="radio" id="liyi"><label for="liyi">离异</label><br>
+    <form>
+        <h2>青春不再❤️抓紧恋爱👰</h2>
+        性别：<input type="radio" id="male"><label for="male">男♂</label>
+        <input type="radio" id="female"><label for="female">女♀</label><br>
+        生日：<select>
+            <option>2005年</option>
+            <option>2004年</option>
+            <option>2003年</option>
+            <option>2002年</option>
+            <option>2001年</option>
+            <option>1999年</option>
+            <option>1998年</option>
+            <option>1997年</option>
+            <option>1996年</option>
+            <option>1995年</option>
+        </select>
+        <select>
+            <option>1月</option>
+            <option>2月</option>
+            <option>3月</option>
+            <option>4月</option>
+            <option>5月</option>
+            <option>6月</option>
+            <option>7月</option>
+            <option>8月</option>
+            <option>9月</option>
+            <option>10月</option>
+            <option>11月</option>
+            <option>12月</option>
+        </select>
+        <select>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+            <option>11</option>
+            <option>12</option>
+            <option>13</option>
+            <option>14</option>
+            <option>15</option>
+            <option>16</option>
+            <option>17</option>
+            <option>18</option>
+            <option>19</option>
+            <option>20</option>
+        </select><br>
+        地址：<input type="text" value="请输入中文字符"><br>
+        婚姻状况：<input type="radio" id="weihun"><label for="weihun">未婚</label>
+        <input type="radio" id="yihun"><label for="yihun">已婚</label>
+        <input type="radio" id="liyi"><label for="liyi">离异</label><br>
+        喜欢的类型：<input type="radio" id="milf"><label for="milf">熟女</label>
+        <input type="radio" id="lady"><label for="lady">少妇</label>
+        <input type="radio" id="student"><label for="student">学生妹</label><br>
+        自我介绍：<textarea></textarea><br>
+        <input type="button" value="免费注册"><br>
+        <a href="https://www.czu.edu.cn/" target="_blank">login in</a>
+        <ul>
+            <h3>寻找帝都抖M</h3>
+            <li>年满18岁</li>
+            <li>D罩杯</li>
+            <li>翘臀</li>
+            <li>身体健康</li>
+        </ul>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- </table> -->
-
-
-
-
-
-
-
-
+    </form>
 
 
 </body>
