--- a/html（下）/综合案例（注册页面）.html
+++ b/html（下）/综合案例（注册页面）.html
@@ -67,7 +67,7 @@
         喜欢的类型：<input type="radio" id="milf"><label for="milf">熟女</label>
         <input type="radio" id="lady"><label for="lady">少妇</label>
         <input type="radio" id="student"><label for="student">学生妹</label><br>
-        自我介绍：<textarea></textarea><br>
+        自我介绍：<textarea>成人交友娱乐</textarea><br>
         <input type="button" value="免费注册"><br>
         <a href="https://www.czu.edu.cn/" target="_blank">login in</a>
         <ul>
@@ -75,11 +75,10 @@
             <li>年满18岁</li>
             <li>D罩杯</li>
             <li>翘臀</li>
-            <li>身体健康</li>
+            <li>身体健康无疾病史</li>
         </ul>
 
     </form>
-
 
 </body>
 
