--- a/html（下）/综合案例（注册页面）.html
+++ b/html（下）/综合案例（注册页面）.html
@@ -64,11 +64,13 @@
         婚姻状况：<input type="radio" id="weihun"><label for="weihun">未婚</label>
         <input type="radio" id="yihun"><label for="yihun">已婚</label>
         <input type="radio" id="liyi"><label for="liyi">离异</label><br>
-        喜欢的类型：<input type="radio" id="milf"><label for="milf">熟女</label>
-        <input type="radio" id="lady"><label for="lady">少妇</label>
-        <input type="radio" id="student"><label for="student">学生妹</label><br>
+        喜欢的类型： <input type="checkbox" />熟女 <!-- 打勾效果 -->
+        <input type="checkbox" />少妇
+        <input type="checkbox" />学生妹<br>
+
         自我介绍：<textarea>成人交友娱乐</textarea><br>
         <input type="button" value="免费注册"><br>
+        <input type="checkbox" />我同意注册条款和会员加入<br /> <!-- 打勾效果 -->
         <a href="https://www.czu.edu.cn/" target="_blank">login in</a>
         <ul>
             <h3>寻找帝都抖M</h3>
@@ -77,7 +79,6 @@
             <li>翘臀</li>
             <li>身体健康无疾病史</li>
         </ul>
-
     </form>
 
 </body>
