--- a/html（下）/列表标签.html
+++ b/html（下）/列表标签.html
@@ -21,7 +21,7 @@
             <li>周7</li>
         </ol>
         <!-- 无序列表 --unordered list（无序列表） -->
-        <ul>
+        <ul style="background-color:	#006400">
             <li>周1</li>
             <li>周2</li>
             <li>周3</li>
@@ -34,7 +34,7 @@
         <!-- dl(definition list-自定义列表)标签来容纳整个数据结构 -->
         <!-- dt(definition title自定义标题)标签 -->
         <!-- dd(definition discribition自定义描述)标签来容纳数据中的标题和内容 -->
-        <dl>
+        <dl style="background-color:	#00FA9A">
             <dt>菜单 </dt>
             <dd>牛肉</dd>
             <dd>鸡肉</dd>
